# calendar-email-api

./: manage.py  pyproject.toml
email_send/: actions.py
email_send/templates/: mail.html
olist_mail_calendar/: asgi.py  settings.py  urls.py  wsgi.py
